# assembly-examples

./: README.md  shell.nix
call-asm-code-from-c/: Makefile  README.md  calc.S  main.c
common/: macros.S
link-bss-into-data-section/: Makefile  README.md  link.ld  main.c
link-bss-into-data-section-v2/: .gitignore  Makefile  README.md  link.ld
qemu-debugcon-driver-x86/: .editorconfig  Makefile  README.md  link.ld  main.S  run_qemu.sh
x86-setup-paging-relocatable/: Makefile  README.md  debugcon.S  link.ld  macros.S  main.S  run_qemu.sh  strings.S
x86_64-boot/: .gitignore  Makefile  README.md  boot.S  link.ld  macros.S  run_qemu.sh  static_mem.S  vars.S
x86_64-multiboot2-kernel-c/: .gitignore  Makefile  README.md  boot.S  grub.cfg  main.c  mk_grub_img.sh  run_qemu.sh
x86_64-multiboot2-kernel-rust/: .gitignore  Cargo.toml  Makefile  README.md  link.ld  mk_grub_img.sh  run_qemu.sh  rust-toolchain.toml
x86_64-multiboot2-kernel-rust/.cargo/: config.toml
x86_64-multiboot2-kernel-rust/src/: global_alloc.rs  main.rs
x86_64-multiboot2-kernel-rust/src/asm/: boot.S  macros.S  mod.rs  static_mem.S  vars.S
