[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
lto = true
# strip = "debuginfo"

[dependencies]
x86 = "0.52.0"
multiboot2 = "0.16.0"
simple-chunk-allocator = "0.1.5"
